// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should match the snapshot when the loading is false 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="fui-DialogSurface__backdrop r1e18s3l"
  />
  .emotion-0 {
  overflow: hidden;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1rem 0;
}

<div
    aria-modal="true"
    class="fui-DialogSurface r1u3t6p6"
    role="dialog"
    tabindex="-1"
  >
    <form>
      <div
        class="fui-DialogBody rhwx3p8"
      >
        <h2
          class="fui-DialogTitle rxjm636 ___mh25s00_kwrsjh0 fsyjsko"
        >
          New file
        </h2>
        <div
          class="fui-DialogContent r1v5zwsm emotion-0"
        >
          <div
            class="emotion-1"
          >
            <span
              class="fui-Input r1oeeo9n ___xay2ks0_8jjmwj0 f11gcy0p fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
            >
              <input
                aria-label="File name"
                class="fui-Input__input r12stul0 ___1q6bera_bzdj540 ffczdla"
                placeholder="File name"
                type="text"
                value="1"
              />
              <span
                class="fui-Input__contentAfter r1572tok"
              >
                .md
              </span>
            </span>
          </div>
        </div>
        <div
          class="fui-DialogActions rhfpeu0 ___1w6yguj_o4tqhn0 f1a7i8kp fd46tj4 fsyjsko f1n00o3b f1mvsp37 flbz1vp"
        >
          <button
            aria-label="Save"
            class="fui-Button r1f29ykk ___dhqv000_ql4wmo0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc f1ksv2xa fhvnf4x fb6swo4 f1klyf7k f232fm2 f1d6mv4x f1nz3ub2 fag2qd2 fmvhcg7 f1o3dhpw f14bpyus fqc85l4 f1h3a8gf fkiggi6 f8gmj8i f1ap8nzx f1igan7k fjag8bx f1v3eptx f1ysmecq faulsx f79t15f fbtzoaq f8qmx7k fd4bjan f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv fixhny3 feygou5"
            type="submit"
          >
            Save
          </button>
          <button
            aria-label="Cancel"
            class="fui-Button r1f29ykk"
            data-tabster="{"restorer":{"type":1}}"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </form>
  </div>
  <span
    hidden=""
  />
  <div
    class="fui-FluentProvider fui-FluentProvider_r_4_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      data-testid="test-ModalDialog"
    >
      <span
        hidden=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot when the loading is true 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="fui-DialogSurface__backdrop r1e18s3l"
  />
  .emotion-0 {
  overflow: hidden;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1rem 0;
}

<div
    aria-modal="true"
    class="fui-DialogSurface r1u3t6p6"
    role="dialog"
    tabindex="-1"
  >
    <form>
      <div
        class="fui-DialogBody rhwx3p8"
      >
        <h2
          class="fui-DialogTitle rxjm636 ___mh25s00_kwrsjh0 fsyjsko"
        >
          New file
        </h2>
        <div
          class="fui-DialogContent r1v5zwsm emotion-0"
        >
          <div
            class="emotion-1"
          >
            <span
              class="fui-Input r1oeeo9n ___xay2ks0_8jjmwj0 f11gcy0p fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
            >
              <input
                aria-label="File name"
                class="fui-Input__input r12stul0 ___1q6bera_bzdj540 ffczdla"
                placeholder="File name"
                type="text"
                value=""
              />
              <span
                class="fui-Input__contentAfter r1572tok"
              >
                .md
              </span>
            </span>
          </div>
        </div>
        <div
          class="fui-DialogActions rhfpeu0 ___1w6yguj_o4tqhn0 f1a7i8kp fd46tj4 fsyjsko f1n00o3b f1mvsp37 flbz1vp"
        >
          <button
            aria-label="Save"
            class="fui-Button r1f29ykk ___hak8ra0_1wqosrr f1bg9a2p f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1s2aq7o f1falr9n f1s2uweq fr80ssc f1ukrpxl fecsdlb fvgxktp f1jct5ie fhvnf4x fb6swo4 f1klyf7k f232fm2 f1uhomfy f14ptb23 f9dbb4x f3qs60o fwd1oij f5u9ap2 f1cyfu5x f1h3a8gf fj8k9ua fifrq0d f196mwp7 f1l6uprw fnekfq fa9u7a5 fw24f3 f1nznrny fq8nxuu ftoixeo f1ao3jkc fpmuzpx fdrzuqr f15x8b5r fphbwmw f19vpps7 fv5swzo f1al02dq fy9mucy f1g9va8i fwgvudy fom6jww f127ot8j f19etb0b f4f984j f3d22hf fw441p0 f1m71e0y f168odog f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv fixhny3 feygou5"
            disabled=""
            type="submit"
          >
            Save
          </button>
          <button
            aria-label="Cancel"
            class="fui-Button r1f29ykk"
            data-tabster="{"restorer":{"type":1}}"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </form>
  </div>
  <span
    hidden=""
  />
  <div
    class="fui-FluentProvider fui-FluentProvider_r_0_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      data-testid="test-ModalDialog"
    >
      <span
        hidden=""
      />
    </div>
  </div>
</DocumentFragment>
`;
